# xmmpysas

./: .gitignore  .gitmodules  .readthedocs.yaml  README.md  basic_commands.txt  pyproject.toml  requirements.txt
docs/source/: absolutebeginners.rst  basics copy.rst  basics.rst  basicsetup.rst  conf.py  helpfulfunctions.rst  index.rst  intro.rst  modules.rst  overview.rst  pysas.obsid.rst  pysas.odfcontrol.rst  pysas.pkgmaker.rst  pysas.pysasplot_utils.rst  pysas.pyutils.rst  pysas.rst  pysas.startsas.rst  quickstart.rst  technical.rst
src/xmmpysas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
