[project]
name = "xmmpysas"
version = "2.5.0"
description = "Python wrapper for XMM-Newton SAS."
authors = [{name = "Ryan Tanner", email = "ryan.tanner@nasa.gov"}]
readme = "src/pysas/README.md"
license = "GPL-3.0-or-later"
keywords = ["XMM-Newton", "x-ray", "astronomy"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy"
]
requires-python = ">=3.10"
dependencies = [
    "astropy>=6.1",
    "astroquery>=0.4.10",
    "beautifultable>=1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.9",
    "numpy>=2.1",
    "pypdf>=5.1,<6.0.0",
    "regions>=0.10",
    "scipy>=1.14",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pysas"

[tool.uv_build]
src-layout = true
package-data = {"my_package" = ["src/pysas/pysaspkgs", 
                                "src/pysas/_data/*"]}
